--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,11 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <permission
+        android:name="com.indukuri.mtdlive.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature"/>
+    <uses-permission android:name="com.indukuri.mtdlive.permission.MAPS_RECEIVE"/>
     
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -28,7 +33,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyB3DYEGRDMxpnrKeXQ6bw1p24bS9T1E1kw" />
+            android:value="REDACTED" />
 
         <activity
             android:name=".FullscreenMapActivity"
