--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,10 +33,10 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="REDACTED" />
+            android:value="AIzaSyB3DYEGRDMxpnrKeXQ6bw1p24bS9T1E1kw" />
 
         <activity
-            android:name=".FullscreenMapActivity"
+            android:name=".MapActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
