--- a/project.properties
+++ b/project.properties
@@ -11,6 +11,7 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-20
-android.library.reference.1=../appcompat_v7
+target=android-21
+android.library.reference.1=../../Downloads/adt-bundle-linux-x86_64-20140702/sdk/extras/android/support/v7/appcompat
 android.library.reference.2=../../Downloads/adt-bundle-linux-x86_64-20140702/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.3=../android-maps-utils/library
