--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="/home/vishnui/Desktop/firebase-client-android-2.0.1.jar"/>
+	<classpathentry kind="lib" path="/home/vishnui/workspace/LiveMTD/libs/jackson-all-1.9.5.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
