--- a/project.properties
+++ b/project.properties
@@ -15,3 +15,5 @@ target=android-21
 android.library.reference.1=../../Downloads/adt-bundle-linux-x86_64-20140702/sdk/extras/android/support/v7/appcompat
 android.library.reference.2=../../Downloads/adt-bundle-linux-x86_64-20140702/sdk/extras/google/google_play_services/libproject/google-play-services_lib
 android.library.reference.3=../android-maps-utils/library
+android.library.reference.4=../android-Ultra-Pull-To-Refresh/ptr-lib
+android.library.reference.5=../RippleEffect/library/src/main
